@@ -13,10 +13,13 @@ import com.pfe.platform.msexecution.service.AgenticEvaluationService;
 import com.pfe.platform.msexecution.service.EvaluationAccessService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
@@ -26,11 +29,15 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+@Slf4j
 @RestController
 @CrossOrigin(origins = "*")
 @RequestMapping({"/api/functional-evaluation", "/api/intelligence/ux-evaluations"})
 @RequiredArgsConstructor
 public class UxEvaluationController {
+
+    @Value("${ms-gestion.base-url:http://localhost:8082}")
+    private String msGestionUrl;
 
     private final UxEvaluationRepository uxEvaluationRepository;
     private final UxNavigationStepRepository stepRepository;
@@ -40,7 +47,7 @@ public class UxEvaluationController {
     private final EvaluationMemberRepository evaluationMemberRepository;
 
     @PostMapping
-    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'QA_ENGINEER')")
+    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'TESTEUR')")
     public ResponseEntity<UxEvaluationDto> create(@Valid @RequestBody UxEvaluationRequest req) {
         String platform = req.getPlatform() != null ? req.getPlatform() : "WEB";
         UxEvaluation created = agenticService.createEvaluation(
@@ -58,14 +65,15 @@ public class UxEvaluationController {
         }
         Path uploadDir = Path.of(System.getProperty("java.io.tmpdir"), "ms-execution", "apks");
         Files.createDirectories(uploadDir);
-        String filename = System.currentTimeMillis() + "_" + file.getOriginalFilename();
+        String safeName = file.getOriginalFilename().replaceAll("[^a-zA-Z0-9._-]", "_");
+        String filename = System.currentTimeMillis() + "_" + safeName;
         Path dest = uploadDir.resolve(filename);
         file.transferTo(dest.toFile());
         return ResponseEntity.ok(Map.of("path", dest.toString(), "filename", filename));
     }
 
     @PostMapping("/{id}/execute")
-    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'QA_ENGINEER')")
+    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'TESTEUR')")
     public ResponseEntity<Void> execute(@PathVariable Long id) {
         evaluationAccessService.checkAccess(id);
         agenticService.executeEvaluation(id);
@@ -73,7 +81,7 @@ public class UxEvaluationController {
     }
 
     @PostMapping("/{id}/stop")
-    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'QA_ENGINEER')")
+    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'TESTEUR')")
     public ResponseEntity<Void> stop(@PathVariable Long id) {
         evaluationAccessService.checkAccess(id);
         agenticService.stopEvaluation(id);
@@ -81,7 +89,7 @@ public class UxEvaluationController {
     }
 
     @PostMapping("/{id}/pause")
-    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'QA_ENGINEER')")
+    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'TESTEUR')")
     public ResponseEntity<Void> pause(@PathVariable Long id) {
         evaluationAccessService.checkAccess(id);
         agenticService.pauseEvaluation(id);
@@ -89,7 +97,7 @@ public class UxEvaluationController {
     }
 
     @PostMapping("/{id}/resume")
-    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'QA_ENGINEER')")
+    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'TESTEUR')")
     public ResponseEntity<Void> resume(@PathVariable Long id) {
         evaluationAccessService.checkAccess(id);
         agenticService.resumeEvaluation(id);
@@ -102,29 +110,38 @@ public class UxEvaluationController {
             @RequestParam(required = false) String platform) {
         List<Long> accessibleIds = evaluationAccessService.getAccessibleEvaluationIds();
         List<UxEvaluation> list;
+        List<UxEvaluation.Platform> platforms = parsePlatforms(platform);
 
         if (accessibleIds == null) {
-            // ADMIN — sees all
             if (projectId != null) {
-                list = platform == null || platform.isBlank()
+                list = platforms == null
                         ? uxEvaluationRepository.findByProjectIdOrderByCreatedAtDesc(projectId)
-                        : uxEvaluationRepository.findByProjectIdAndPlatformOrderByCreatedAtDesc(projectId, parsePlatform(platform));
+                        : uxEvaluationRepository.findByProjectIdAndPlatformInOrderByCreatedAtDesc(projectId, platforms);
             } else {
-                list = platform == null || platform.isBlank()
+                list = platforms == null
                         ? uxEvaluationRepository.findAllByOrderByCreatedAtDesc()
-                        : uxEvaluationRepository.findByPlatformOrderByCreatedAtDesc(parsePlatform(platform));
+                        : uxEvaluationRepository.findByPlatformInOrderByCreatedAtDesc(platforms);
             }
         } else if (accessibleIds.isEmpty()) {
             list = List.of();
         } else {
-            list = platform == null || platform.isBlank()
+            list = platforms == null
                     ? uxEvaluationRepository.findByIdInOrderByCreatedAtDesc(accessibleIds)
-                    : uxEvaluationRepository.findByIdInAndPlatformOrderByCreatedAtDesc(accessibleIds, parsePlatform(platform));
+                    : uxEvaluationRepository.findByIdInAndPlatformInOrderByCreatedAtDesc(accessibleIds, platforms);
             if (projectId != null) {
                 list = list.stream().filter(e -> projectId.equals(e.getProjectId())).toList();
             }
         }
-        return ResponseEntity.ok(list.stream().map(UxEvaluationDto::fromEntity).collect(Collectors.toList()));
+        List<UxEvaluationDto> dtos = list.stream().map(UxEvaluationDto::fromEntity).collect(Collectors.toList());
+        if (!dtos.isEmpty()) {
+            List<Long> evalIds = dtos.stream().map(UxEvaluationDto::getId).toList();
+            Map<Long, Long> ownerMap = evaluationMemberRepository
+                    .findByEvaluationIdInAndRole(evalIds, EvaluationMember.Role.OWNER)
+                    .stream()
+                    .collect(Collectors.toMap(EvaluationMember::getEvaluationId, EvaluationMember::getUserId, (a, b) -> a));
+            dtos.forEach(d -> d.setOwnerUserId(ownerMap.get(d.getId())));
+        }
+        return ResponseEntity.ok(dtos);
     }
 
     @GetMapping("/{id}")
@@ -177,7 +194,7 @@ public class UxEvaluationController {
     }
 
     @PostMapping("/{id}/members")
-    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'QA_ENGINEER')")
+    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER')")
     public ResponseEntity<Map<String, String>> addMember(
             @PathVariable Long id,
             @RequestBody Map<String, Object> body) {
@@ -189,11 +206,33 @@ public class UxEvaluationController {
         }
 
         evaluationMemberRepository.save(new EvaluationMember(id, userId, EvaluationMember.Role.TESTER));
+
+        UxEvaluation evaluation = uxEvaluationRepository.findById(id).orElse(null);
+        String evalName = evaluation != null && evaluation.getDescription() != null
+                ? evaluation.getDescription() : "Évaluation #" + id;
+        notifyMemberAdded(userId, "evaluation", evalName, "/functional-evaluation/" + id, id);
+
         return ResponseEntity.ok(Map.of("message", "Membre ajouté"));
     }
 
+    private void notifyMemberAdded(Long userId, String context, String contextName, String link, Long contextId) {
+        try {
+            RestTemplate rt = new RestTemplate();
+            Map<String, Object> payload = Map.of(
+                    "userId", userId,
+                    "context", context,
+                    "contextName", contextName,
+                    "link", link,
+                    "contextId", contextId
+            );
+            rt.postForEntity(msGestionUrl + "/api/internal/notifications/member-added", payload, Map.class);
+        } catch (Exception e) {
+            log.warn("Failed to send member notification for user {}: {}", userId, e.getMessage());
+        }
+    }
+
     @DeleteMapping("/{id}/members/{userId}")
-    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'QA_ENGINEER')")
+    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER')")
     @Transactional
     public ResponseEntity<Map<String, String>> removeMember(
             @PathVariable Long id,
@@ -203,7 +242,34 @@ public class UxEvaluationController {
         return ResponseEntity.ok(Map.of("message", "Membre retiré"));
     }
 
-    private UxEvaluation.Platform parsePlatform(String platform) {
-        return UxEvaluation.Platform.valueOf(platform.toUpperCase());
+    @DeleteMapping("/{id}")
+    @PreAuthorize("hasAnyRole('ADMIN', 'TEST_MANAGER', 'TESTEUR')")
+    @Transactional
+    public ResponseEntity<Map<String, String>> deleteEvaluation(@PathVariable Long id) {
+        if (!uxEvaluationRepository.existsById(id)) {
+            return ResponseEntity.notFound().build();
+        }
+        Long currentUserId = SecurityUtils.getCurrentUserId();
+        boolean isAdmin = SecurityUtils.hasGlobalRole("ADMIN");
+        boolean isOwner = evaluationMemberRepository.findByEvaluationId(id).stream()
+                .anyMatch(m -> m.getRole() == EvaluationMember.Role.OWNER && m.getUserId().equals(currentUserId));
+        if (!isAdmin && !isOwner) {
+            return ResponseEntity.status(403).body(Map.of("message", "Seul l'admin ou le créateur peut supprimer cette évaluation"));
+        }
+        stepRepository.deleteByEvaluationId(id);
+        functionalTestResultRepository.deleteByEvaluationId(id);
+        evaluationMemberRepository.deleteByEvaluationId(id);
+        uxEvaluationRepository.deleteById(id);
+        return ResponseEntity.ok(Map.of("message", "Évaluation supprimée"));
+    }
+
+    private List<UxEvaluation.Platform> parsePlatforms(String platform) {
+        if (platform == null || platform.isBlank()) return null;
+        String upper = platform.toUpperCase();
+        return switch (upper) {
+            case "WEB" -> List.of(UxEvaluation.Platform.WEB, UxEvaluation.Platform.WEB_DESKTOP, UxEvaluation.Platform.WEB_MOBILE);
+            case "MOBILE" -> List.of(UxEvaluation.Platform.MOBILE, UxEvaluation.Platform.MOBILE_APP);
+            default -> List.of(UxEvaluation.Platform.valueOf(upper));
+        };
     }
 }
